# networksafegaurd

./: .gitignore  README.md  main.py  push_data.py  pyproject.toml  requirements.txt
final_model/: preprocessor.pkl
mlruns/0/: meta.yaml
mlruns/0/02aa77906aeb4cba9f78dbf936e70832/: meta.yaml
mlruns/0/02aa77906aeb4cba9f78dbf936e70832/metrics/: f1_score  precision  recall_score
mlruns/0/02aa77906aeb4cba9f78dbf936e70832/tags/: mlflow.runName
mlruns/0/324702e491a54bcf8a644285caae104b/: meta.yaml
mlruns/0/324702e491a54bcf8a644285caae104b/metrics/: f1_score  precision  recall_score
mlruns/0/324702e491a54bcf8a644285caae104b/tags/: mlflow.runName
mlruns/0/4bdd1dd15dc142a5b584d9b781758688/: meta.yaml
mlruns/0/4bdd1dd15dc142a5b584d9b781758688/metrics/: f1_score  precision  recall_score
mlruns/0/4bdd1dd15dc142a5b584d9b781758688/tags/: mlflow.runName
mlruns/0/73ad765175c2413084c09598484c2c88/: meta.yaml
mlruns/0/73ad765175c2413084c09598484c2c88/metrics/: f1_score  precision  recall_score
mlruns/0/c2589f5de6ed4ae9b0943cadbfc201b4/: meta.yaml
mlruns/0/fb919f93773947dda2e64968e13742ee/: meta.yaml
networksafegaurd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
networksecurity/components/: data_ingestion.py  data_validation.py  model_trainer.py
networksecurity/constant/training_pipeline/: __init__.py
networksecurity/entity/: config_entity.py
networksecurity/exception/: exception.py
networksecurity/logging/: logger.py
networksecurity/pipeline/: training_pipeline.py
networksecurity/utils/main_utils/: utils.py
(+48 files in other folders)
